--- a/Development/jsDeveloper.html
+++ b/Development/jsDeveloper.html
@@ -47,3 +47,26 @@ undefined ترجع الدالة كلمة ID إن لم يوجد كتاب مطاب
 <!-- for loop مر على جميع الكائنات داخل المصفوفة وقم بطباعة الفاتورة باستخدام -->
 
 <!-- -.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.-.- -->
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+     
+     <script src="scripts.js"></script>
+     <title>Document</title>
+
+</head>
+<body>
+     
+
+     <input id ="bookId">
+     <button onclick="getBookById(bookId, books)"></button>
+     <h3>books</h3>
+<h1 id="books">0</h1>
+
+
+
+     <script src="scripts.js"></script>
+</body>
+
+</html>
